add backup target

--- a/applicationDefs/longhorn/values.yaml
+++ b/applicationDefs/longhorn/values.yaml
@@ -7,3 +7,5 @@ persistence:
 ingress:
   enabled: true
   host: longhorn.myogg.dev
+defaultBackupStore:
+  backupTarget: "nfs://192.168.46.3:/mnt/swolish/critical/apps/longhorn-backup"
