--- a/applicationDefs/metallb/metallb-config.yaml
+++ b/applicationDefs/metallb/metallb-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: metallb
+  name: metallb-config
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "2"
@@ -11,9 +11,9 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   sources:
-    repoURL: https://github.com/jakelooker/k8s-config.git
-    targetRevision: main
-    path: applicationDefs/metallb/config
+    - repoURL: https://github.com/jakelooker/k8s-config.git
+      targetRevision: main
+      path: applicationDefs/metallb/config
   syncPolicy:
     automated:
       enabled: true
