--- a/applicationDefs/longhorn/values.yaml
+++ b/applicationDefs/longhorn/values.yaml
@@ -1,11 +1,13 @@
 defaultSettings:
   storageOverProvisioningPercentage: "100"
   replicaAutoBalance: "best-effort"
+  defaultReplicaCount: 3
 persistence:
   defaultClass: true
-  defaultClassReplicaCount: 3
 ingress:
   enabled: true
   host: longhorn.myogg.dev
 defaultBackupStore:
   backupTarget: "nfs://192.168.46.3:/mnt/swolish/critical/apps/longhorn-backup"
+preUpgradeChecker:
+  jobEnabled: false
