--- a/applicationDefs/longhorn/values.yaml
+++ b/applicationDefs/longhorn/values.yaml
@@ -1,7 +1,7 @@
 defaultSettings:
   storageOverProvisioningPercentage: "100"
   replicaAutoBalance: "best-effort"
-  defaultReplicaCount: 3
+  defaultReplicaCount: "3"
 persistence:
   defaultClass: true
 ingress:
