--- a/applicationDefs/cert-manager/config/0-cloudflare-secret.yaml
+++ b/applicationDefs/cert-manager/config/0-cloudflare-secret.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: cert-manager
 type: Opaque
 stringData:
-  api-token: rP9ZdznaIWhOyUzhkHkArxatRF1aatPlwwRhsNYT
+  api-token: 
