--- a/apps/longhorn/longhorn.yaml
+++ b/apps/longhorn/longhorn.yaml
@@ -1,19 +1,23 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cert-manager-config
+  name: longhorn
   namespace: argocd
-  annotations:
-    argocd.argoproj.io/sync-wave: "2"
 spec:
   destination:
-    namespace: cert-manager
+    namespace: longhorn-system
     server: https://kubernetes.default.svc
   project: default
   sources:
     - repoURL: https://github.com/jakelooker/k8s-config.git
       targetRevision: main
-      path: applicationDefs/cert-manager/config
+      ref: values
+    - chart: longhorn
+      repoURL: https://charts.longhorn.io
+      targetRevision: 1.10.0
+      helm:
+        valueFiles:
+          - $values/apps/longhorn/values.yaml
   syncPolicy:
     automated:
       enabled: true
