--- a/apps/cert-manager/cert-manager-config.yaml
+++ b/apps/cert-manager/cert-manager-config.yaml
@@ -1,19 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: metallb-config
+  name: cert-manager-config
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "2"
 spec:
   destination:
-    namespace: metallb-system
+    namespace: cert-manager
     server: https://kubernetes.default.svc
   project: default
   sources:
     - repoURL: https://github.com/jakelooker/k8s-config.git
       targetRevision: main
-      path: applicationDefs/metallb/config
+      path: apps/cert-manager/config
   syncPolicy:
     automated:
       enabled: true
