--- a/apps/metallb/metallb-config.yaml
+++ b/apps/metallb/metallb-config.yaml
@@ -1,23 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: longhorn
+  name: metallb-config
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
 spec:
   destination:
-    namespace: longhorn-system
+    namespace: metallb-system
     server: https://kubernetes.default.svc
   project: default
   sources:
     - repoURL: https://github.com/jakelooker/k8s-config.git
       targetRevision: main
-      ref: values
-    - chart: longhorn
-      repoURL: https://charts.longhorn.io
-      targetRevision: 1.10.0
-      helm:
-        valueFiles:
-          - $values/applicationDefs/longhorn/values.yaml
+      path: apps/metallb/config
   syncPolicy:
     automated:
       enabled: true
