--- a/apps/ha/config/ha-ingress.yaml
+++ b/apps/ha/config/ha-ingress.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: web
 spec:
   rules:
-  - host: home.myogg.net
+  - host: home.myogg.dev
     http:
       paths:
       - backend:
