--- a/argo/ha/ha.yaml
+++ b/argo/ha/ha.yaml
@@ -23,3 +23,8 @@ spec:
       - CreateNamespace=true
       - PrunePropagationPolicy=foreground
       - PruneLast=true
+    retry:
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 3m
