--- a/argo/metallb/metallb.yaml
+++ b/argo/metallb/metallb.yaml
@@ -25,3 +25,8 @@ spec:
       enabled: true
     syncOptions:
     - CreateNamespace=true 
+    retry:
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 3m      
