--- a/apps/ha/config/ha-service.yaml
+++ b/apps/ha/config/ha-service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    io.kompose.service: homeassistant
-  name: homeassistant
+      app: home-assistant
+  name: home-assistant
   namespace: home-assistant
 spec:
   ports:
@@ -11,4 +11,4 @@ spec:
       port: 8123
       targetPort: 8123
   selector:
-    io.kompose.service: homeassistant
+    app: home-assistant
