--- a/argo/network-policy/network-policy.yaml
+++ b/argo/network-policy/network-policy.yaml
@@ -9,6 +9,8 @@ spec:
     repoURL: https://github.com/jakelooker/k8s-config.git
     targetRevision: main
     path: policy/network-policy
+    directory:
+      recurse: true      
   destination:
     server: https://kubernetes.default.svc
   syncPolicy:
