--- a/apps/ha/config/ha-deployment.yaml
+++ b/apps/ha/config/ha-deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - image: ghcr.io/home-assistant/home-assistant:latest
-          name: homeassistant
+          name: home-assistant
           ports:
             - containerPort: 8123
           volumeMounts:
