--- a/apps/ha/config/ha-ingress.yaml
+++ b/apps/ha/config/ha-ingress.yaml
@@ -12,7 +12,7 @@ spec:
       paths:
       - backend:
           service:
-            name: homeassistant
+            name: home-assistant
             port:
               name: http
         path: /
