--- a/apps/ha/config/ha-deployment.yaml
+++ b/apps/ha/config/ha-deployment.yaml
@@ -34,6 +34,9 @@ spec:
             capabilities:
               drop:
                 - ALL
+            runAsUser: 1000
+            runAsGroup: 1000
+            fsGroup: 1000                
           livenessProbe:
             httpGet:
               path: /
