--- a/apps/ha/config/ha-deployment.yaml
+++ b/apps/ha/config/ha-deployment.yaml
@@ -9,7 +9,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: homeassistant
+      app: home-assistant
   strategy:
     type: Recreate
   template:
