--- a/policy/network-policy/longhorn-system.yaml
+++ b/policy/network-policy/longhorn-system.yaml
@@ -24,6 +24,4 @@ spec:
     - namespaceSelector:
         matchLabels:
           kubernetes.io/metadata.name: kube-system
-      podSelector:
-        matchLabels:
-          app.kubernetes.io/name: traefik            
+      podSelector: {}
