--- a/policy/network-policy/longhorn-system.yaml
+++ b/policy/network-policy/longhorn-system.yaml
@@ -1,16 +1,6 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: global-deny-all-ingress
-  namespace: longhorn-system
-spec:
-  podSelector: {}
-  policyTypes:
-  - Ingress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
   name: allow-same-namespace
   namespace: longhorn-system
 spec:
@@ -20,6 +10,7 @@ spec:
   ingress:
   - from:
     - podSelector: {}
+  -from:
     - namespaceSelector:
         matchLabels:
           kubernetes.io/metadata.name: kube-system
