--- a/apps/longhorn/values.yaml
+++ b/apps/longhorn/values.yaml
@@ -1,12 +1,15 @@
 defaultSettings:
   storageOverProvisioningPercentage: "100"
-  replicaAutoBalance: "best-effort"
   defaultReplicaCount: "2"
+  defaultDataLocality: "best-effort"
+  concurrentAutomaticEngineUpgradePerNodeLimit: "1"
 persistence:
   defaultClass: true
 ingress:
   enabled: true
   host: longhorn.myogg.dev
+  annotations:
+    traefik.ingress.kubernetes.io/router.middlewares: "default-redirect-https@kubernetescrd"
 defaultBackupStore:
   backupTarget: "nfs://192.168.46.3:/mnt/swolish/critical/apps/longhorn-backup"
 preUpgradeChecker:
