--- a/argo/longhorn/longhornConfig.yaml
+++ b/argo/longhorn/longhornConfig.yaml
@@ -1,10 +1,10 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: longhorn
+  name: longhorn-config
   namespace: argocd
   annotations:
-    argocd.argoproj.io/sync-wave: "1"  
+    argocd.argoproj.io/sync-wave: "2"
 spec:
   destination:
     namespace: longhorn-system
@@ -13,20 +13,9 @@ spec:
   sources:
     - repoURL: https://github.com/jakelooker/k8s-config.git
       targetRevision: main
-      ref: values
-    - chart: longhorn
-      repoURL: https://charts.longhorn.io
-      targetRevision: 1.10.0
-      helm:
-        valueFiles:
-          - $values/apps/longhorn/values.yaml
+      path: apps/longhorn/config
   syncPolicy:
     automated:
       enabled: true
     syncOptions:
-    - CreateNamespace=true
-    retry:
-      backoff:
-        duration: 5s
-        factor: 2
-        maxDuration: 3m      
+    - CreateNamespace=false
