--- a/argo/jellyfin/jellyfin.yaml
+++ b/argo/jellyfin/jellyfin.yaml
@@ -1,26 +1,32 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: longhorn-config
+  name: longhorn
   namespace: argocd
   annotations:
-    argocd.argoproj.io/sync-wave: "2"
+    argocd.argoproj.io/sync-wave: "2"  
 spec:
   destination:
-    namespace: longhorn-system
+    namespace: tv
     server: https://kubernetes.default.svc
   project: default
   sources:
     - repoURL: https://github.com/jakelooker/k8s-config.git
       targetRevision: main
-      path: apps/longhorn/config
+      ref: values
+    - chart: jellyfin
+      repoURL: https://jellyfin.github.io/jellyfin-helm
+      targetRevision: main
+      helm:
+        valueFiles:
+          - $values/apps/jellyfin/values.yaml
   syncPolicy:
     automated:
       enabled: true
     syncOptions:
-    - CreateNamespace=false
+    - CreateNamespace=true
     retry:
       backoff:
         duration: 5s
         factor: 2
-        maxDuration: 3m    
+        maxDuration: 3m
