--- a/argo/jellyfin/jellyfin.yaml
+++ b/argo/jellyfin/jellyfin.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: longhorn
+  name: jellyfin
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "2"  
