--- a/argo/jellyfin/jellyfinConfig.yaml
+++ b/argo/jellyfin/jellyfinConfig.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: longhorn-config
+  name: jellyfin-config
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "1"
