--- a/apps/jellyfin/config/mediaStorage.yaml
+++ b/apps/jellyfin/config/mediaStorage.yaml
@@ -7,6 +7,7 @@ spec:
     storage: 400Gi
   accessModes:
     - ReadWriteMany
+  storageClassName: "local-path"
   nfs:
     server: 192.168.50.2
     path: "/mnt/swolish/noBackup/media/media"
@@ -19,6 +20,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteMany
+  storageClassName: "local-path"
   resources:
     requests:
       storage: 400Gi
