--- a/argo/jellyfin/jellyfin.yaml
+++ b/argo/jellyfin/jellyfin.yaml
@@ -16,7 +16,7 @@ spec:
       ref: values
     - chart: jellyfin
       repoURL: https://jellyfin.github.io/jellyfin-helm
-      targetRevision: main
+      targetRevision: 2.4.0
       helm:
         valueFiles:
           - $values/apps/jellyfin/values.yaml
