--- a/apps/jellyfin/values.yaml
+++ b/apps/jellyfin/values.yaml
@@ -14,6 +14,7 @@ ingress:
     - host: jellyfin.myogg.dev
       paths:
         - path: /
+          pathType: ImplementationSpecific
 livenessProbe:
   initialDelaySeconds: 10
   tcpSocket:
