--- a/apps/jellyfin/config/mediaStorage.yaml
+++ b/apps/jellyfin/config/mediaStorage.yaml
@@ -3,6 +3,8 @@ kind: PersistentVolume
 metadata:
   name: jellyfin-media-nfs
 spec:
+  capacity:
+    storage: 20Ti
   accessModes:
     - ReadWriteMany
   storageClassName: "local-path"
