--- a/apps/jellyfin/values.yaml
+++ b/apps/jellyfin/values.yaml
@@ -34,5 +34,6 @@ readinessProbe:
 persistance:
   config:
     enabled: true
+    existingClaim: "pvc-59b305d2-be58-4dbe-9af9-bd63ede08e44"
   media:
     enabled: true
