remove nvidia runtime for now

--- a/apps/jellyfin/values.yaml
+++ b/apps/jellyfin/values.yaml
@@ -5,7 +5,7 @@ securityContext:
   readOnlyRootFilesystem: true
   runAsNonRoot: true
   runAsUser: 1000
-runtimeClassName: "nvidia"
+#runtimeClassName: "nvidia"
 ingress:
   enabled: true
   annotations:
