--- a/apps/jellyfin/values.yaml
+++ b/apps/jellyfin/values.yaml
@@ -4,7 +4,7 @@ securityContext:
   capabilities:
     drop:
     - ALL
-  readOnlyRootFilesystem: true
+  readOnlyRootFilesystem: false
   runAsNonRoot: true
   runAsUser: 1000
 #runtimeClassName: "nvidia"
