--- a/apps/jellyfin/values.yaml
+++ b/apps/jellyfin/values.yaml
@@ -13,7 +13,7 @@ ingress:
   annotations:
     traefik.ingress.kubernetes.io/router.middlewares: "default-redirect-https@kubernetescrd"
   hosts:
-    - host: jellyfin.myogg.dev
+    - host: jellyfin.dev.myogg.net
       paths:
         - path: /
           pathType: ImplementationSpecific
