--- a/apps/longhorn/values.yaml
+++ b/apps/longhorn/values.yaml
@@ -7,7 +7,7 @@ persistence:
   defaultClass: true
 ingress:
   enabled: true
-  host: longhorn.myogg.dev
+  host: longhorn.dev.myogg.net
   annotations:
     traefik.ingress.kubernetes.io/router.middlewares: "default-redirect-https@kubernetescrd"
 defaultBackupStore:
