use real lets encrypt

--- a/apps/cert-manager/config/2-cluster-issuer.yaml
+++ b/apps/cert-manager/config/2-cluster-issuer.yaml
@@ -6,8 +6,8 @@ metadata:
 spec:
   acme:
     email: jakelooker@gmail.com
-    server: https://acme-staging-v02.api.letsencrypt.org/directory
-    #server: https://acme-v02.api.letsencrypt.org/directory
+    #server: https://acme-staging-v02.api.letsencrypt.org/directory
+    server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       name: issuer-letsencrypt-staging
     solvers:
