--- a/apps/jellyfin/config/mediaStorage.yaml
+++ b/apps/jellyfin/config/mediaStorage.yaml
@@ -7,7 +7,7 @@ spec:
     storage: 25Gi
   accessModes:
     - ReadWriteOnce
-  storageClassName: ""
+  storageClassName: "local-path"
   volumeName: ""
   nfs:
     server: 192.168.50.2
