--- a/policy/network-policy/tv.yaml
+++ b/policy/network-policy/tv.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: allow-same-namespace
-  namespace: home-assistant
+  namespace: tv
 spec:
   podSelector: {}
   policyTypes:
