--- a/apps/frigate/config/frigate-deployment.yaml
+++ b/apps/frigate/config/frigate-deployment.yaml
@@ -41,10 +41,10 @@ spec:
               name: frigate-media
             - mountPath: /dev/shm
               name: shm
-          resources: 
-            limits:
-              cpu: 2000m
-              memory: 3Gi
+          resources: {}
+            # limits:
+            #   cpu: 2000m
+            #   memory: 3Gi
           securityContext:
             capabilities:
               drop:
