--- a/apps/frigate/config/frigate-deployment.yaml
+++ b/apps/frigate/config/frigate-deployment.yaml
@@ -50,7 +50,7 @@ spec:
               drop:
               - ALL
             readOnlyRootFilesystem: true
-            runAsNonRoot: true
+            runAsNonRoot: false
             runAsUser: 2002
             runAsGroup: 2002
       restartPolicy: Always
