--- a/apps/frigate/config/frigate-deployment.yaml
+++ b/apps/frigate/config/frigate-deployment.yaml
@@ -49,7 +49,7 @@ spec:
             capabilities:
               drop:
               - ALL
-            readOnlyRootFilesystem: true
+            readOnlyRootFilesystem: false
             runAsNonRoot: false
             # runAsUser: 2002
             # runAsGroup: 2002
