--- a/apps/myogg/config/myogg-deployment.yaml
+++ b/apps/myogg/config/myogg-deployment.yaml
@@ -26,10 +26,6 @@ spec:
             - mountPath: /usr/share/nginx/html
               name: myogg
               readOnly: true
-            - mountPath: /tmp
-              name: tmp
-            - mountPath: /etc
-              name: etc
           resources:
             limits:
               cpu: 100m
@@ -38,7 +34,7 @@ spec:
             capabilities:
               drop:
               - ALL
-            readOnlyRootFilesystem: true
+            readOnlyRootFilesystem: false
             runAsNonRoot: true
             runAsUser: 2003
             runAsGroup: 2003
@@ -47,7 +43,3 @@ spec:
         - name: myogg
           persistentVolumeClaim:
             claimName: myogg
-        - name: tmp
-          emptyDir: {}
-        - name: etc
-          emptyDir: {}
