--- a/argo/network-policy/network-policy.yaml
+++ b/argo/network-policy/network-policy.yaml
@@ -18,7 +18,7 @@ spec:
       prune: true
       selfHeal: true
     syncOptions:
-      - CreateNamespace=false
+      - CreateNamespace=true
       - ServerSideApply=true
     retry:
       backoff:
