--- a/argo/unifi/unifi.yaml
+++ b/argo/unifi/unifi.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: jellyfin
+  name: unifi
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "3"  
