--- a/apps/unifi/values.yaml
+++ b/apps/unifi/values.yaml
@@ -12,8 +12,8 @@ ingress:
   enabled: true
   annotations:
     traefik.ingress.kubernetes.io/router.middlewares: "default-redirect-https@kubernetescrd"
-    traefik.ingress.kubernetes.io/service.serversscheme: https
-    traefik.ingress.kubernetes.io/service.serverstransport: my-insecure-transport@kubernetescrd
+    traefik.ingress.kubernetes.io/service.serversscheme: "https"
+    traefik.ingress.kubernetes.io/service.serverstransport: "my-insecure-transport@kubernetescrd"
   hosts:
     - host: unifi.dev.myogg.net
       paths:
