--- a/apps/unifi/values.yaml
+++ b/apps/unifi/values.yaml
@@ -4,7 +4,7 @@ securityContext:
   capabilities:
     drop:
     - ALL
-  readOnlyRootFilesystem: true
+  readOnlyRootFilesystem: false
   runAsNonRoot: true
   runAsUser: 999
   runAsGroup: 999
