--- a/argo/network-policy/network-policy.yaml
+++ b/argo/network-policy/network-policy.yaml
@@ -4,7 +4,7 @@ metadata:
   name: network-policies
   namespace: argocd
 spec:
-  project: default
+  project: prereq
   source:
     repoURL: https://github.com/jakelooker/k8s-config.git
     targetRevision: main
