--- a/argo/cert-manager/cert-manager-config.yaml
+++ b/argo/cert-manager/cert-manager-config.yaml
@@ -9,7 +9,7 @@ spec:
   destination:
     namespace: cert-manager
     server: https://kubernetes.default.svc
-  project: default
+  project: prereq
   sources:
     - repoURL: https://github.com/jakelooker/k8s-config.git
       targetRevision: main
