--- a/argo/frigate/frigate.yaml
+++ b/argo/frigate/frigate.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "3"
 spec:
-  project: default
+  project: automation
   source:
     repoURL: https://github.com/jakelooker/k8s-config.git
     targetRevision: main
