--- a/argo/metallb/metallb-config.yaml
+++ b/argo/metallb/metallb-config.yaml
@@ -9,7 +9,7 @@ spec:
   destination:
     namespace: metallb-system
     server: https://kubernetes.default.svc
-  project: default
+  project: prereq
   sources:
     - repoURL: https://github.com/jakelooker/k8s-config.git
       targetRevision: main
