--- a/argo/nvidia/nvidiaConfig.yaml
+++ b/argo/nvidia/nvidiaConfig.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   destination:
     server: https://kubernetes.default.svc
-  project: default
+  project: prereq
   sources:
     - repoURL: https://github.com/jakelooker/k8s-config.git
       targetRevision: main
