--- a/projects/web.yaml
+++ b/projects/web.yaml
@@ -10,3 +10,6 @@ spec:
   destinations:
   - server: 'https://kubernetes.default.svc'
     namespace: '*'
+  clusterResourceWhitelist:
+  - group: '*'
+    kind: '*'    
