--- a/apps/seerr/values.yaml
+++ b/apps/seerr/values.yaml
@@ -66,6 +66,9 @@ securityContext:
 service:
   type: ClusterIP
   port: 5055
+  ipFamilyPolicy: SingleStack
+  ipFamilies:
+    - IPv4
 
 config:
   persistence:
@@ -78,8 +81,8 @@ config:
 ingress:
   enabled: true
   ingressClassName: "traefik"
-  annotations: {}
-    #traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
+  annotations: 
+    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
   hosts:
     - host: media.dev.myogg.net
       paths:
